<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_text_black"
        tools:context=".drawer.Profile_Activity">


        <RelativeLayout
            android:id="@+id/relativeLayout_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Tb_App"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_black"
                app:title="@string/app_name"
                app:titleTextColor="@color/color_text_white" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_black"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/test"
                    android:textColor="@color/color_text_white"
                    android:textColorHint="@color/colorWhite" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField_Name"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/email_id"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_black"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@string/test_gmail_com"

                    android:textColor="@color/color_text_white"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField_Email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/mobile_number"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_black"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="@string/_9765848598"

                    android:textColor="@color/color_text_white"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField_mobile"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/color_text_white"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_black"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="123456"
                    android:textColor="@color/color_text_white"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField_Password"
                android:backgroundTint="@color/color_text_white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/date_of_birth"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Et_DOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_black"
                    android:inputType="date"
                    android:maxLines="1"
                    android:text="03-03-1996"

                    android:textColor="@color/color_text_white"
                    android:textColorHint="@color/colorWhite" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TV_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField_DOB"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/gender" />


            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV_Gender"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="1dp"
                android:textColor="@color/colorWhite">

                <RadioButton
                    android:id="@+id/radiobtn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:text="male"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:text="Female"

                    android:textColor="@color/colorWhite" />
            </RadioGroup>

            <TextView
                android:id="@+id/TV_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radiogroup"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_layout_rounded_transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="No Premium Plan is Active"
                android:textAlignment="center"
                android:textColor="@color/color_text_white"
                app:drawableStartCompat="@drawable/ic_premium_icon"
                app:errorEnabled="true"
                app:helperTextEnabled="true" />

            <Button
                android:id="@+id/Btn_apply"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/TV_text"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_grey_rounded"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Save Changes"
                android:textColor="@color/color_text_black" />


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</layout>


