<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginScreen">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_text_white">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_margin="18dp"
            android:fontFamily="@font/asap"
            android:onClick="homePage"
            android:padding="18dp"
            android:text="@string/skip"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skip"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/applogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/asap"
                android:text="Welcome Sign In"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/asap"
                android:text="@string/enter_your_credential"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/colorPrimaryDark"
                app:helperTextTextColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:startIconDrawable="@drawable/ic_baseline_person"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/asap"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark"
                app:startIconDrawable="@drawable/ic_baseline_lock"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/asap"
                    android:inputType="textPassword"
                    android:textColor="@color/color_text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/color_text_black"
                    android:fontFamily="@font/asap"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/curved_grey_medicl"
                android:fontFamily="@font/asap"
                android:text="@string/login"
                android:textColor="@color/color_text_black" />

            <TextView
                android:id="@+id/nextBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/asap"
                android:onClick="registerPage"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/layout_progress" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
