<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_text_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:text="@string/code_verification"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/otp_message"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text="@string/enter_six_digit_code"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text=" +91 9812345678"
                android:textColor="@color/colorPrimaryDark" />

            <com.chaos.view.PinView
                android:id="@+id/otp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/colorWhite"
                android:textColor="@color/colorPrimaryDark"
                app:cursorColor="@color/colorPrimaryDark"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="5dp"
                app:itemWidth="50dp"
                app:lineColor="@color/colorPrimaryDark" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_coundown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="01:00"
                    android:textColor="@color/colorPrimaryDark" />

                <ProgressBar
                    android:id="@+id/progressBar_main"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/cirecle_round_btn"
                    android:indeterminateTint="@android:color/white"
                    android:padding="20dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/veriftbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/curved_grey_medicl"
                android:fontFamily="@font/asap"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/color_text_black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resetBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/asap"
                android:text="@string/resend"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
