<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_text_white">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:onClick="finishActivity"
        android:padding="16dp"
        android:tint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_baseline_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/closeBtn"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/applogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/asap"
            android:text="Mobile Verification"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeBtn"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:text="@string/entring_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_circle"
            android:gravity="center"
            app:ccp_contentColor="@color/colorPrimaryDark"
            app:ccp_countryPreference="in,us"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneReg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/phone"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_baseline_call"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/asap"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/color_text_black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/curved_grey_medicl"
            android:fontFamily="@font/asap"
            android:text="@string/continue_txt"
            android:textAllCaps="false"
            android:textColor="@color/black_overlay"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
